--- a/wordStyle.css
+++ b/wordStyle.css
@@ -1,18 +1,23 @@
 
 html, body{
+width: 100%;
+height: 100%;
 
 }
 
 #card-holder {
-    min-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
     max-height: 100vh !important;
-    max-width: 100vw;
-    min-height: 500px;
+    max-width: 1200px;
+    min-width: 500px
 }    
+
+
 
 table.main-game {
     table-layout: fixed;
-    width:50vh;
+    width:40%;
     border-collapse: separate;
     vertical-align: center;
     margin: auto;
@@ -21,9 +26,9 @@ table.main-game {
 tr.word-container td {
     position: relative;
     padding-bottom: 15%; /* Set the padding as a percentage of the width */
-    border: .4vh solid rgb(255, 255, 255);
+    border: .4vw solid rgb(255, 255, 255);
     text-align: center;
-    vertical-align: middle; rgb(0, 0, 0);
+    vertical-align: middle;
     background-color: rgb(217, 217, 215);
 
 }
@@ -47,14 +52,14 @@ div.letter-container * {
 span.game-letters {
     position: absolute;
     font-family: 'Shantell Sans', cursive;
-    font-size: 7vh;
+    font-size: 6vw;
     text-align: center;
     max-width: 80%;
     white-space: nowrap;
 }
 
 .title {
-    font-size: 6vh;
+    font-size: 6vw;
     font-family: 'Shantell Sans', cursive;
 }
 
@@ -71,17 +76,17 @@ table.key-table {
 
 table.key-row-one {
 
-    width: 56vh;
+    width: 40%;
     margin:auto
 }
 
   tr.key-row-container td {
     position: relative;
     padding-bottom: 13%; /* Set the padding as a percentage of the width */
-    border: 0.4vh solid rgb(255, 255, 255);
-    border-radius: 2vh;
+    border: 0.4vw solid rgb(255, 255, 255);
+    border-radius: 2vw;
     text-align: center;
-    vertical-align: middle; rgb(0, 0, 0);
+    vertical-align: middle;
     background-color: rgb(217, 217, 215);
 
 }
@@ -110,14 +115,14 @@ button.key-letters {
     border-radius: 0%;
     position: absolute;
     font-family: 'Shantell Sans', cursive;
-    font-size: 3vh;
+    font-size: 2.2vw;
     text-align: center;
     max-width: 100%;
     white-space: nowrap;
 }
 
 table.key-row-two {
-    width: 50vh;
+    width: 36%;
     margin: auto;
 }
 
@@ -126,5 +131,59 @@ tr.key-row-container td.special {
 }
 
 #enter {
-    font-size: 1.7vh;
+    font-size: 1.2vw;
+}
+
+@media screen and (max-width: 500px) {
+    .title {
+      font-size: 30px;
+    }
+
+    button.key-letters {
+        font-size: 12px;
+    }
+
+    #enter {
+        font-size: 6px;
+    }
+
+    span.game-letters {
+        font-size: 30px
+    }
+
+    tr.word-container td {
+        border: 2px solid rgb(255, 255, 255);
+    }
+
+    tr.key-row-container td {
+        border: 2px solid rgb(255, 255, 255);
+        border-radius: 9px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .title {
+      font-size: 73px;
+    }
+
+    button.key-letters {
+        font-size: 26px;
+    }
+
+    #enter {
+        font-size: 14px;
+    }
+
+    span.game-letters {
+        font-size: 70px;
+    }
+
+    tr.word-container td {
+        border: 4.5px solid rgb(255, 255, 255);
+    }
+
+    tr.key-row-container td {
+        border: 4.5px solid rgb(255, 255, 255);
+        border-radius: 20px;
+    }
 }
